--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,9 +7,9 @@
 <body>
   <h1>1. GET 요청 (검색)</h1>
   <form action="/search" method="get">
-    <input type="text" name="v1">
+    <input type="text" name="value1">
     <hr>
-    <input type="text" name="v2">
+    <input type="text" name="value2">
     <hr>
     <button>검색</button>
   </form>
